fix custom scrollbar doubling

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,6 @@ body {
   }
 }
 
-body {
+.custom-scrollbar {
   overflow-y: scroll;
 }
